syntax = "proto3";

package protocol;

service ToyKafka {
  rpc Produce(ProduceRequest) returns (MsgNumber){}
  rpc Poll(PollRequest) returns (PollResponse){}
}

message Topic {
  string topic = 1;
}

message Payload {
  bytes payload = 1;
}

message ProduceRequest {
  Topic topic = 1;
  Payload payload = 2;
}

message MsgNumber {
  uint32 msg_number = 1;
}

message PollRequest {
  string topic = 1;
  uint32 from_msg_number = 2;
}

message PollResponse {
    repeated Payload payloads = 1;
    uint32 next_msg_number = 2;
}
